<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C5F4B0"
    tools:context=".ImageGame">

    <TextView
        android:id="@+id/tv_nameApp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name_App"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.042" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nameApp3"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <Button
        android:id="@+id/btn_returnHome2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="28dp"
        android:onClick="returnHome2"
        android:text="@string/ReturnHome"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_labelResultImageGame"
        app:layout_constraintVertical_bias="0.76" />

    <Button
        android:id="@+id/btn_goToNumberGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToNumberGame"
        android:text="@string/GoToNumberGame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toEndOf="@+id/btn_returnHome2"
        app:layout_constraintTop_toTopOf="@+id/btn_returnHome2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_scoreImageGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toEndOf="@+id/tv_labelResultImageGame"
        app:layout_constraintTop_toTopOf="@+id/tv_labelResultImageGame"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_labelResultImageGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginBottom="220dp"
        android:text="@string/Score"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinner_animals"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:entries="@array/pools"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
</androidx.constraintlayout.widget.ConstraintLayout>